--- a/src/scss/_basic_styles.scss
+++ b/src/scss/_basic_styles.scss
@@ -282,16 +282,21 @@ img {
 
 .main-content {
 
-
-    img {
-        width: 200px;
-        height: 200px;
+    .logo {
+        width: 300px;
+        height: 300px;
         object-fit: contain;
         position: relative;
 
         &::before {
             content: " ";
         }
+    }
+
+    img {
+        width: 200px;
+        height: 200px;
+        object-fit: contain;
     }
 }
 
