--- a/src/scss/_basic_styles.scss
+++ b/src/scss/_basic_styles.scss
@@ -308,3 +308,7 @@ img {
         font-size: 1.2em;
     }
 }
+.wpforms-submit {
+    background-color: #6565f3 !important;
+    width: 100% !important;
+}
